0116_1012_유기농배추

--- a/wltjd0620/2주차/boj_1012_유기농 배추/1012.md
+++ b/wltjd0620/2주차/boj_1012_유기농 배추/1012.md
@@ -6,4 +6,18 @@
 
 
 ## 알게 된 것
+1. dfs 알고리즘
+- 방문처리
+- 맵의 경우 상하좌우 for문
+- for문 안에서 ny, nx 정의하고 오버플로우 체크
+- 방문하지 않은 노드인데 탐색해야 하는 노드이다 ( 배추가 있다 ) -> dfs 재귀로
 
+2. 테스트케이스가 여러개 주어진 경우
+- 이 문제의 경우 테스트케이스 T가 주어지는 문제였음
+- 각 테스트케이스의 경우에 대해 ret는 초기화했지만 맵은 초기화하지 않는 실수
+```
+fill(&baecu[0][0], &baecu[0][0] + 51 * 51, 0);
+fill(&visited[0][0], &visited[0][0] + 51 * 51, 0);
+```
+
+이렇게 하면 됨.
