--- a/wltjd0620/번외/boj_1181_단어 정렬/1181.md
+++ b/wltjd0620/번외/boj_1181_단어 정렬/1181.md
@@ -8,3 +8,4 @@
 
 ## 알게 된 것
 1. sort 함수 cmp 함수는 return 값이 true일 경우 앞 인자가 왼쪽으로 정렬 되고, false일 경우 뒤 인자가 왼쪽으로 정렬된다.
+2. [text](https://leeeegun.tistory.com/5)
